--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,19 @@
-allure-pytest
-requests~=2.27.1
-pytest
-beautifulsoup4~=4.11.1
+allure-pytest==2.9.45
+allure-python-commons==2.9.45
+attrs==21.4.0
+beautifulsoup4==4.11.1
+certifi==2021.10.8
+charset-normalizer==2.0.12
+idna==3.3
+iniconfig==1.1.1
+lxml==4.8.0
+packaging==21.3
+pluggy==1.0.0
+py==1.11.0
+pyparsing==3.0.9
+pytest==7.1.2
+requests==2.27.1
+six==1.16.0
+soupsieve==2.3.2.post1
+tomli==2.0.1
+urllib3==1.26.9
